Cambiado todo java.util.Date por java.sql.Date. incorporados los test de usuarios. 5 errores